Fixed detail page header overflowing 🔧🪲
Fixed #120

--- a/frontend/src/styles/Detail.sass
+++ b/frontend/src/styles/Detail.sass
@@ -168,7 +168,9 @@
                     position: relative
 
                 .detail-title
-                    text-indent: 2rem
+                    max-width: 50%
+                    margin-left: 1em
+                    text-wrap: balance
                     text-align: initial
                 
                 .detail-img
